////////////////////////////////////////////////////////////////////////////////
// v2.1 - ../../.... ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - Replace with NOP in the instructions editor.
    - Added copy/paste to instruction editing grid, thanks to Thijs Kroesbergen.

  upgrades:
    - .

  bugfixes:
    - .

////////////////////////////////////////////////////////////////////////////////
// v2.0 - 31/09/2015 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - ILSpy support.
    - hot assembly replacement feature for ILSpy 2.3+ and Reflector 8.5+.
    - support for generic instance types and methods in the instruction editor.
    - generic type arguments editor when selecting a type/method with generic
      parameter(s).

  upgrades:
    - improved member matching with code injection.
    - try to resolve an assembly from the host assemblies first, then use the
      default resolver.
    - de4Dot 3.1.4 update.
    - Mono.Cecil 0.9.6 update.
    - tooltips for long types.
    - better display with generic instance providers.
    - plugin API cleanup.

  bugfixes:
    - fixed .NET 3.5 profile detection.
    - properly remove assembly context when the host assembly is unloaded.
    - validate current handler before switching to keep all alterations.
    - fixed injection adding bad or duplicate corlib reference (again).
    - fixed implicit version when injecting assembly name reference.
    - properly give the focus to the member reference window treeview.
    - handle the case when assembly resolving fails during injection.
    - workaround Reflector not displaying sub menu separators.
    - fixed C# code generation with generics.
    - fixed type/method hierarchy mapping with generics.
    - fixed NRE when editing custom attribute.