@@ -19,20 +19,15 @@ LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
 OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. */
 
-#region Imports
-
 using System;
 using Mono.Cecil;
 using System.IO;
 using Reflexil.Plugins;
 
-#endregion
-
 namespace Reflexil.Utils
 {
 	public class ReflexilAssemblyResolver : DefaultAssemblyResolver
 	{
-		#region Methods
 
 		public AssemblyDefinition ReadAssembly(string file, ReaderParameters parameters)
 		{
@@ -86,6 +81,5 @@ namespace Reflexil.Utils
 			return base.Resolve(name, parameters);
 		}
 
-		#endregion
 	}
 }
