@@ -5,9 +5,10 @@
   news:
     - Replace with NOP in the instructions editor.
     - Added copy/paste to instruction editing grid, thanks to Thijs Kroesbergen.
+    - Added SilverLight 5 compilation profile.
 
   upgrades:
-    - .
+    - Use resolver for system assemblies if NoStdLib is set.
 
   bugfixes:
     - .
